--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ img {
 .section-a {
   max-width: 1100px;
   width: 100%;
-  margin: 50px auto 0 auto;
+  margin: 90px auto 0 auto;
 }
 
 .section-a .con-card {
@@ -95,7 +95,9 @@ img {
 
 .con-card .image {
   height: 400px;
-  width: 400px;
+  max-width: 400px;
+  width: 90%;
+  margin: 0 auto;
   overflow: hidden;
   margin-bottom: 16px;
 }
